💄 Fix CTA tooltip on mobile and make it configurable

--- a/src/components/ydi/ydiWrapper.module.css
+++ b/src/components/ydi/ydiWrapper.module.css
@@ -27,7 +27,7 @@
 
 .question .result .actionContainer button {
     display: block;
-    margin: 20px auto;
+    margin: 10px auto;
     padding: 10px 15px;
     border: none;
     background: var(--brand-primary);
